--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,13 @@ h1,
 p {
   text-align: center;
 }
+
+footer {
+  text-align: center;
+  text-decoration: none;
+}
+
+footer a {
+  margin: 0 15px;
+  color: rgb(0, 128, 49);
+}
