--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@ h1,
 p {
   text-align: center;
 }
+.about-paragraph {
+  line-height: 10px;
+}
 .croissant-photo {
   max-width: 100%;
   border-radius: 10px;
